# multimodal-sentiment-analysis

./: .gitignore  README.md  config.py  evaluate.py  plan.md  pyproject.toml  run_pipeline.py  train.py
models/: audio_model.py  fusion_model.py  perceiver.py  video_model.py
notebooks/: analysis.ipynb  data_exploration.ipynb  model_debug.ipynb  preprocessing_demo.ipynb
scripts/: download_data.py  final_notebook_report.py
utils/: dataset.py  preprocessing.py
